--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -130,7 +130,7 @@
         <%= link_to "#" do %>
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
-          <%if @purchase.item.id.present?%>
+          <%unless item.present?%>
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
