購入ページへ遷移する際に資格がない場合、それぞれのページに遷移するよう実装

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -130,10 +130,12 @@
         <%= link_to item_path(item.id) do %>
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
-          <%unless item.present?%>
-          <div class='sold-out'>
-            <span>Sold Out!!</span>
-          </div>
+          <% @purchases.each do |purchase| %>
+            <%if item.id == purchase.item.id%>
+              <div class='sold-out'>
+                <span>Sold Out!!</span>
+              </div>
+            <%end%>
           <%end%>
         </div>
         <div class='item-info'>
